# voevent-parse

./: .gitignore  README.md  pyproject.toml  setup.py  tox.ini
examples/: author_new_voevent.py  basic_usage.py  voevent_parsing.py
src/voeventparse/: __init__.py  convenience.py  definitions.py  misc.py  voevent.py
src/voeventparse/fixtures/: datapaths.py
tests/: test_convenience_routines.py  test_examples.py  test_voevent_parsing.py  test_voeventparse.py
